modules/security/main.tf
resource "aws_security_group" "alb" {
    name = "${var.env}-alb-sg"
    description = "Security group for ALB in ${var.env} environment"
    vpc_id = var.vpc_id

    ingress {
    description = "Allow HTTP from anywhere"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    }

tags = {
    Name = "${var.env}-alb-sg"
    }
}

resource "aws_security_group" "app" {
    name = "${var.env}-app-sg"
    description = "Security group for Application servers in ${var.env} environment"
    vpc_id = var.vpc_id

    ingress {
    description = "Allow HTTP from ALB"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    security_groups = [aws_security_group.alb.id]
    }

    egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "${var.env}-app-sg"
    }
}

resource "aws_security_group" "db" {
    name = "${var.env}-db-sg"
    description = "Security group for Database servers in ${var.env} environment"
    vpc_id = var.vpc_id

    ingress {
    description = "Allow PostgreSQL from Application servers"
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    security_groups = [aws_security_group.app.id]
    }

    egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "${var.env}-db-sg"
    }
}
